--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   </svg>
                 </button>
                 
-                <ul id="menu1" role="menu" aria-labelledby="menubutton1" tabindex="-1">
+                <ul id="menu1" role="menu" aria-labelledby="menubutton1">
                   <li role="menuitem">Pizza 1</li>
                   <li role="menuitem">Pizza 2</li>
                   <li role="menuitem">Pizza 3</li>
